tests/compiler_errors/while_unclosed_body.tlp
while true do 
    1 putu